[gd_scene load_steps=23 format=3 uid="uid://dynv7y3by6dvx"]

[ext_resource type="Script" path="res://scripts/Gameplay/main_game.gd" id="1_2gask"]
[ext_resource type="FontFile" uid="uid://d3u5428h3aenu" path="res://assets/fonts/Kaph-Regular.ttf" id="1_pyx26"]
[ext_resource type="Texture2D" uid="uid://cu8a0x6e6p8pb" path="res://assets/UI/background.png" id="2_w08m4"]
[ext_resource type="Script" path="res://scripts/UI/MainUI.gd" id="3_gqje3"]
[ext_resource type="AudioStream" uid="uid://dbyhjti0cbqj6" path="res://assets/SE/click1.wav" id="4_t2hyo"]
[ext_resource type="AudioStream" uid="uid://bgwa7ulxvccos" path="res://assets/bgm/gamemain.mp3" id="5_iytmj"]
[ext_resource type="Theme" uid="uid://vb12ay5d7wb4" path="res://assets/theme/start_ui.tres" id="6_n8nu8"]
[ext_resource type="Texture2D" uid="uid://ddxrytjrtx6rk" path="res://assets/UI/Icon_Small_Arrow.png" id="8_da4dy"]
[ext_resource type="Texture2D" uid="uid://dpxuk5wf3r3pc" path="res://assets/UI/Icon_Small_WhiteOutline_Return.png" id="9_dainb"]
[ext_resource type="Script" path="res://scripts/UI/GameEnd.gd" id="10_4jbsj"]
[ext_resource type="AudioStream" uid="uid://dol0sxioangkv" path="res://assets/SE/Minimalist1.wav" id="10_h4e4j"]
[ext_resource type="Texture2D" uid="uid://cne4lrxa5gqit" path="res://assets/UI/Box_Flowers.png" id="11_0dvrn"]
[ext_resource type="AudioStream" uid="uid://d17ubsnaepu6p" path="res://assets/SE/Minimalist4.wav" id="11_oxhy8"]
[ext_resource type="Texture2D" uid="uid://bpxomjf2wxb1w" path="res://assets/UI/Banner_Premade_LevelComplete.svg" id="12_45v6t"]
[ext_resource type="AudioStream" uid="uid://c0x73jlj0mpfs" path="res://assets/SE/Minimalist3.wav" id="12_holmc"]
[ext_resource type="AudioStream" uid="uid://divxfthhx63xl" path="res://assets/SE/Minimalist5.wav" id="13_rj6dq"]
[ext_resource type="Theme" uid="uid://conkpxj3qsywe" path="res://assets/theme/button_blue.tres" id="13_we5s3"]
[ext_resource type="Theme" uid="uid://cyhtfq7v4nxvx" path="res://assets/theme/button_pink.tres" id="14_37868"]
[ext_resource type="AudioStream" uid="uid://dyk50m2vxmhel" path="res://assets/SE/Minimalist6.wav" id="14_wlkr7"]
[ext_resource type="AudioStream" uid="uid://dkk3sun0vqkbp" path="res://assets/SE/merge.wav" id="15_pqmqm"]
[ext_resource type="AudioStream" uid="uid://ds7d53u3dldct" path="res://assets/SE/Minimalist2.wav" id="16_vve0v"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iv14f"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_2gask")

[node name="BgmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_iytmj")

[node name="UI" type="Node2D" parent="."]
script = ExtResource("3_gqje3")

[node name="ClickButtonPlayer" type="AudioStreamPlayer2D" parent="UI"]
stream = ExtResource("4_t2hyo")

[node name="background" type="TextureRect" parent="UI"]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_w08m4")
expand_mode = 1

[node name="remainCount" type="Label" parent="UI"]
offset_left = 1728.0
offset_top = 120.0
offset_right = 1839.0
offset_bottom = 175.0
theme = ExtResource("6_n8nu8")
theme_override_fonts/font = ExtResource("1_pyx26")
theme_override_font_sizes/font_size = 48
text = "136"

[node name="remainCountTitle" type="Label" parent="UI"]
offset_left = 1224.0
offset_top = 120.0
offset_right = 1703.0
offset_bottom = 175.0
theme = ExtResource("6_n8nu8")
theme_override_fonts/font = ExtResource("1_pyx26")
text = "Remain Count:"

[node name="achieveCount" type="Label" parent="UI"]
offset_left = 1728.0
offset_top = 56.0
offset_right = 1839.0
offset_bottom = 144.0
theme = ExtResource("6_n8nu8")
theme_override_fonts/font = ExtResource("1_pyx26")
theme_override_font_sizes/font_size = 48
text = "0
"

[node name="achieveCountTitle" type="Label" parent="UI"]
offset_left = 1200.0
offset_top = 56.0
offset_right = 1701.0
offset_bottom = 111.0
theme = ExtResource("6_n8nu8")
theme_override_fonts/font = ExtResource("1_pyx26")
theme_override_font_sizes/font_size = 48
text = "Achieve Count:"

[node name="backButton" type="Button" parent="UI"]
offset_left = 56.0
offset_top = 32.0
offset_right = 206.0
offset_bottom = 182.0
theme = ExtResource("6_n8nu8")
theme_override_constants/icon_max_width = 100
icon = ExtResource("8_da4dy")
icon_alignment = 1

[node name="restartButton" type="Button" parent="UI"]
offset_left = 264.0
offset_top = 32.0
offset_right = 414.0
offset_bottom = 182.0
theme = ExtResource("6_n8nu8")
icon = ExtResource("9_dainb")
icon_alignment = 1

[node name="achieveBoxContainer" type="Node2D" parent="UI"]
position = Vector2(1440, 224)
scale = Vector2(0.7, 0.7)

[node name="GameEnd" type="Node2D" parent="UI"]
visible = false
script = ExtResource("10_4jbsj")

[node name="BoxFlowers" type="Sprite2D" parent="UI/GameEnd"]
position = Vector2(976, 592)
scale = Vector2(0.494744, 0.494744)
texture = ExtResource("11_0dvrn")

[node name="BannerPremadeLevelComplete" type="Sprite2D" parent="UI/GameEnd"]
position = Vector2(968, 232)
scale = Vector2(0.374016, 0.374016)
texture = ExtResource("12_45v6t")

[node name="QuitButton" type="Button" parent="UI/GameEnd"]
offset_left = 800.0
offset_top = 680.0
offset_right = 1150.0
offset_bottom = 800.0
theme = ExtResource("13_we5s3")
text = "Quit"

[node name="AgainButton" type="Button" parent="UI/GameEnd"]
offset_left = 800.0
offset_top = 456.0
offset_right = 1150.0
offset_bottom = 576.0
theme = ExtResource("14_37868")
text = "Again
"

[node name="BoardLine" type="StaticBody2D" parent="."]
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoardLine"]
position = Vector2(1060, 813.333)
shape = SubResource("WorldBoundaryShape2D_iv14f")
one_way_collision = true

[node name="Board" type="Node2D" parent="."]
z_index = 1
position = Vector2(160, 240)
scale = Vector2(1.44, 1.44)

[node name="SE" type="Node2D" parent="."]

[node name="ClickPlayer1" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("10_h4e4j")

[node name="ClickPlayer4" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("11_oxhy8")

[node name="ClickPlayer3" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("12_holmc")

[node name="ClickPlayer5" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("13_rj6dq")

[node name="ClickPlayer6" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("14_wlkr7")

[node name="MergePlayer" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("15_pqmqm")

[node name="ClickPlayer2" type="AudioStreamPlayer2D" parent="SE"]
stream = ExtResource("16_vve0v")

[connection signal="pressed" from="UI/backButton" to="UI" method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/restartButton" to="UI" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/GameEnd/QuitButton" to="UI/GameEnd" method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/GameEnd/AgainButton" to="UI/GameEnd" method="_on_again_button_pressed"]
